# yate

./: 1.linux-build.sh  2.vs2017-build.cmd  2.vs2022-build.cmd  3.himix100-build.sh  6.vs2017-build-64.cmd  7.android-build-v7a.cmd  8.android-build-v8a.cmd  9.android-build-x64.cmd  9.android-build-x86.cmd  Aux_cmd_define.h  Aux_type.h  Aux_yate_hal.cpp  Aux_yate_hal.h  Aux_yate_log.cpp  Aux_yate_log.h  CMakeLists.txt  Makefile.in  README  README.md  YateConfig.cmake.in  all.android-buildl.cmd  autogen.sh  build-Linux.sh  build-vs2017.cmd  configure.ac  daemon.run  run.console  run.daemon  run.in  run.shell  yate.pc.in  yatecbase.h  yateclass.h  yatemath.h  yatemime.h  yatengine.h  yatephone.h  yateversn.h  yatewin32.h  yatewiresniff.h  (+1 more)
extlibs/logger/: CMakeLists.txt
libs/: CMakeLists.txt
libs/ilbc/: CMakeLists.txt  LICENSE.txt  Makefile.in
libs/miniwebrtc/: CMakeLists.txt  Makefile.in  common_types.h  module.h  module_common_types.h  typedefs.h
libs/miniwebrtc/audio/coding_g722/: g722_decode.c  g722_enc_dec.h  g722_encode.c  g722_interface.c  g722_interface.h
libs/miniwebrtc/audio/coding_ilbc/: cb_search.c  decode.c  decode.h  encode.c  encode.h  ilbc.c  ilbc.h  init_decode.c  init_encode.c  swap_bytes.c  swap_bytes.h  unpack_bits.c  unpack_bits.h
libs/miniwebrtc/audio/coding_isac/fix/: bandwidth_estimator.c  codec.h  entropy_coding.c  filterbank_tables.c  filterbank_tables.h  filterbanks.c  filters_neon.c  isacfix.c  lattice.c  lpc_masking_model.c  lpc_masking_model.h  pitch_estimator.c  pitch_estimator.h  pitch_filter.c  structs.h
libs/miniwebrtc/audio/coding_isac/main/: codec.h  decode.c  encode.c  entropy_coding.c  entropy_coding.h  fft.c  isac.c  lpc_tables.c  lpc_tables.h  pitch_filter.c  settings.h  structs.h
libs/miniwebrtc/audio/common/processing/: auto_correlation.c  complex_fft.c  cross_correlation.c  dot_product_with_scale.c  downsample_fast.c  ilbc_specific_functions.c  min_max_operations.c  min_max_operations_neon.c  resample_by_2.c  signal_processing_library.h  spl_inl_armv7.h  vector_scaling_operations.c
libs/miniwebrtc/audio/common/vad/: vad_core.c  vad_core.h  vad_defines.h  vad_filterbank.c  vad_filterbank.h  vad_sp.c  webrtc_vad.c  webrtc_vad.h
libs/miniwebrtc/audio/processing/: audio_buffer.cc  audio_processing.h  audio_processing_impl.cc  audio_processing_impl.h  noise_suppression_impl.cc  noise_suppression_impl.h
libs/miniwebrtc/audio/processing/aec/: aec_core.c  aec_core.h  aec_rdft.c  aec_resampler.c  aec_resampler.h  echo_cancellation.c
libs/miniwebrtc/audio/processing/aecm/: aecm_core.c  aecm_core.h  aecm_core_neon.c  echo_control_mobile.c
libs/miniwebrtc/audio/processing/ns/: ns_core.c  (+7 more)
libs/miniwebrtc/system_wrappers/: cpu_features.cc  cpu_features_arm.c  critical_section_wrapper.h  file_impl.cc  file_impl.h
libs/yasn/: CMakeLists.txt  Makefile.in  asn.cpp  yateasn.h
libs/yiax/: CMakeLists.txt  Makefile.in  engine.cpp  frame.cpp  transaction.cpp  yateiax.h
libs/yjabber/: CMakeLists.txt  Makefile.in  jbengine.cpp  jbstream.cpp  jgengine.cpp  session.cpp  xmpputils.cpp  xmpputils.h  yatejabber.h  yatejingle.h
libs/ymgcp/: CMakeLists.txt  endpoint.cpp  engine.cpp  message.cpp  transaction.cpp  yatemgcp.h
libs/ymodem/: CMakeLists.txt  modem.cpp  uart.cpp  yatemodem.h
libs/ypbx/: CMakeLists.txt  Makefile.in  assist.cpp  multiroute.cpp  yatepbx.h
libs/yradio/: CMakeLists.txt  Makefile.in  codec.cpp  radio.cpp  yateradio.h
libs/yrtp/: CMakeLists.txt  Makefile.in  dejitter.cpp  secure.cpp  session.cpp  transport.cpp  yatertp.h
libs/yscript/: CMakeLists.txt  evaluator.cpp  javascript.cpp  jsobjects.cpp  script.cpp  yatescript.h
libs/ysdp/: CMakeLists.txt  media.cpp  parser.cpp  session.cpp  yatesdp.h
libs/ysig/: CMakeLists.txt  Makefile.in  address.cpp  dumper.cpp  engine.cpp  interface.cpp  isup.cpp  layer2.cpp  layer3.cpp  layer4.cpp  main-ss7test.cpp  management.cpp  q921.cpp  q931.cpp  router.cpp  run-ss7test  sccp.cpp  sigcall.cpp  sigtran.cpp  tcap.cpp  testpart.cpp  tup.cpp  yatesig.h
libs/ysip/: CMakeLists.txt  Makefile.in  engine.cpp  message.cpp  transaction.cpp  util.cpp  util.h  yatesip.h
libs/ysnmp/: CMakeLists.txt  Makefile.in  snmp.cpp  yatesnmp.h
modules/: CMakeLists.txt  CMake_base.cmake  CMake_engine.cmake  CMake_server.cmake  CMake_sip.cmake  CMake_test.cmake  Makefile.in  amrnbcodec.cpp  analyzer.cpp  callfork.cpp  callgen.cpp  cdrbuild.cpp  cdrcombine.cpp  cdrfile.cpp  conference.cpp  demo.cpp  dumbchan.cpp  efrcodec.cpp  enumroute.cpp  extmodule.cpp  faxchan.cpp  fileinfo.cpp  filetransfer.cpp  g722webrtc.cpp  gsmcodec.cpp  gvoice.cpp  h323chan.cpp  ilbccodec.cpp  ilbcwebrtc.cpp  isaccodec.cpp  javascript.cpp  moh.cpp  msgsniff.cpp  mux.cpp  openssl.cpp  pbx.cpp  regexroute.cpp  rmanager.cpp  speexcodec.cpp  tonedetect.cpp  (+10 more)
modules/3gpp_c_code/: decoder.c  encoder.c
modules/client/: alsachan.cpp  coreaudio.cpp  dsoundchan.cpp  jabberclient.cpp  osschan.cpp
modules/gsm/inc/: config.h
modules/jabber/: jabberserver.cpp  jbfeatures.cpp
modules/qt4/: clientarchive.cpp  clientarchive.h  customtable.cpp  customtable.h  customtext.cpp  customtext.h  customtree.cpp  customtree.h  updater.cpp  updater.h  widgetlist.cpp  widgetlist.h
modules/radio/: dummyradio.cpp  radiotest.cpp  ybladerf.cpp
modules/server/: CMakeLists.txt  accfile.cpp  analog.cpp  analogdetect.cpp  cache.cpp  callcounters.cpp  ccongestion.cpp  ciscosm.cpp  clustering.cpp  cpuload.cpp  dbpbx.cpp  dbwave.cpp  eventlogs.cpp  heartbeat.cpp  lateroute.cpp  lksctp.cpp  mgcpca.cpp  mgcpgw.cpp  monitoring.cpp  mrcpspeech.cpp  mysqldb.cpp  park.cpp  pbxassist.cpp  pgsqldb.cpp  presence.cpp  queues.cpp  queuesnotify.cpp  regfile.cpp  register.cpp  sigtransport.cpp  sipfeatures.cpp  sqlitedb.cpp  subscription.cpp  tdmcard.cpp  users.cpp  wpcard.cpp  wpcardw.cpp  yradius.cpp  ysigchan.cpp  ysnmpagent.cpp  (+1 more)
modules/sig/: camel_map.cpp  isupmangler.cpp  ss7_lnp_ansi.cpp
modules/sip/: sip_cnam_lnp.cpp
modules/test/: CMakeLists.txt  Makefile.in  crypto.cpp  jsext.cpp  msgdelay.cpp  nettest.cpp  randcall.cpp  test.cpp  test1.cpp
(+326 files in other folders)
