
ADD_SUBDIRECTORY(ilbc)

ADD_SUBDIRECTORY(miniwebrtc)

ADD_SUBDIRECTORY(yasn)

ADD_SUBDIRECTORY(yiax)

ADD_SUBDIRECTORY(yjabber)

ADD_SUBDIRECTORY(ymgcp)

ADD_SUBDIRECTORY(ymodem)

ADD_SUBDIRECTORY(ypbx)

#ADD_SUBDIRECTORY(yradio)

ADD_SUBDIRECTORY(yrtp)

ADD_SUBDIRECTORY(yscript)

ADD_SUBDIRECTORY(ysdp)

ADD_SUBDIRECTORY(ysig)

ADD_SUBDIRECTORY(ysip)

ADD_SUBDIRECTORY(ysnmp)


